--- a/etc/safp.yaml
+++ b/etc/safp.yaml
@@ -6,8 +6,8 @@
 cache:
   dir: /tmp/cache/
   timestamp: 0
-  roll_time: 555
-  roll_size: 2048
+  roll_time: 600
+#  roll_size: 2048
 
 
 watchers:
@@ -16,11 +16,11 @@ watchers:
 #    port: 55555
 #    proto: tcp_safp
 
-  - type: net
-    host: 127.0.0.1
-    port: 44444
-    proto: tcp_raw
-    prefix: iamnet
+#  - type: net
+#    host: 127.0.0.1
+#    port: 44444
+#    proto: tcp_raw
+#    prefix: iamnet
 
   - type: file
     dir: /tmp/logs
@@ -28,10 +28,10 @@ watchers:
     filter: messages
 
 writers:
-  - type: net
-    host: 127.0.0.1
-    port: 55555
-    proto: tcp_safp
+#  - type: net
+#    host: 127.0.0.1
+#    port: 55555
+#    proto: tcp_safp
 
   - type: file
     dir: /tmp/out
